# cs1103-integer-otreblan

./: CMakeLists.txt  README.md  integer.pc.in
include/: CMakeLists.txt  integer.hpp
pkg/: .gitignore  PKGBUILD
src/: CMakeLists.txt  integer.cpp  main.cpp
